@@ -220,6 +220,7 @@ Release 0.2.0
    HBASE-424   Should be able to enable/disable .META. table
    HBASE-771   Names legal in 0.1 are not in 0.2; breaks migration
    HBASE-788   Div by zero in Master.jsp (Clint Morgan via Jim Kellerman)
+   HBASE-791   RowCount doesn't work (Jean-Daniel Cryans via Stack)
    
   IMPROVEMENTS
    HBASE-559   MR example job to count table rows
